modififcaiton de tous le designe du site

--- a/contact_form/index.html
+++ b/contact_form/index.html
@@ -59,7 +59,7 @@
 
 				<label class="label-input100" for="email">Entrez votre mail</label>
 				<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-					<input id="email" class="input100" type="text" name="email" placeholder="Eg. example@email.com">
+					<input id="email" class="input100" type="text" name="email" placeholder="Identifiant.exemple@email.com">
 					<span class="focus-input100"></span>
 				</div>
 
