--- a/contact_form/index.html
+++ b/contact_form/index.html
@@ -40,7 +40,7 @@
 <body>
 
 
-	<div style="background-color:#000000;"class="container-contact100">
+	<div style="background-color: #1a1a1a;"class="container-contact100">
 		<div class="wrap-contact100">
 			<form class="contact100-form validate-form" action="../index.html">
 				<span class="contact100-form-title">
@@ -91,7 +91,7 @@
 			</form>
 
 			<div class="contact100-more flex-col-c-m" style="background-image: url('images/dressing.webp');">
-	<div class="bordure"style="border-radius: 15px;width:530px;background-color:#000000;">
+	<div class="bordure"style="border-radius: 15px;width:530px;background-color: #1a1a1a;">
 				<div class="flex-w size1 p-b-47">
 
 					<div class="txt1 p-r-25">
