Update Clean & Go

--- a/index.html
+++ b/index.html
@@ -173,7 +173,6 @@ span:hover{
         <li><a style="color:#1a1a1a;"  href="#section-blog" class="nav-link">Tarifs</a></li>
         <li><a style="color:#1a1a1a;"  href="#section-bio" class="nav-link">Histoire</a></li>
         <li><a  style="color:#1a1a1a;" href="#section-contact" class="nav-link">Contact</a></li>
-              <li><a  style="color:#1a1a1a;" href="localisation.html" class="nav-link">Localisations</a></li>
       </ul>
     <ul>
     <a style="color:#1a1a1a;"href="https://www.facebook.com/"><span class="icon-facebook"></span></a>
@@ -275,7 +274,7 @@ Nous vous proposons de répondre à vos problématiques de temps, de place et
       <section style="background-size: 1300px;background-repeat: no-repeat;background-image:url('images/tarifs.jpeg');"  class="site-section" id="section-blog">
 
         <div>
-            <h2 style="text-align: center;color:#1a1a1a;"class="heading text-uppercase text">Tarifs</h2>
+            <h2 style="text-align: center;color:#fff;"class="heading text-uppercase text">Tarifs</h2>
     <div style="margin-left:250px;">
       <div class="ripple hvr-sweep-to-top" style="">
 
